ros2_docker_ws/ur5_ws/log/build_2026-02-04_10-59-37/ur5_motion_planning/stderr.log
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:485:13: warning: missing terminating " character
  485 |       node, "scaled_joint_trajectory_controller/f
      |             ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:485:13: error: missing terminating " character
  485 |       node, "scaled_joint_trajectory_controller/f
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp: In function ‘int main(int, char**)’:
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:485:12: error: expected primary-expression at end of input
  485 |       node, "scaled_joint_trajectory_controller/f
      |            ^
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:485:12: error: expected ‘,’ or ‘;’ at end of input
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:485:12: error: expected ‘}’ at end of input
/workspace/ur5_ws/src/ur5_motion_planning/src/ur5_plan_and_analyze_node.cpp:83:33: note: to match this ‘{’
   83 | int main(int argc, char** argv) {
      |                                 ^
gmake[2]: *** [CMakeFiles/ur5_plan_and_analyze_node.dir/build.make:76: CMakeFiles/ur5_plan_and_analyze_node.dir/src/ur5_plan_and_analyze_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/ur5_plan_and_analyze_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
